--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="h-100">
   <head>
     <link rel="shortcut icon" href="data:," />
     <meta charset="utf-8" />
@@ -7,7 +7,9 @@
     <meta name="theme-color" content="#000000" />
     <title>React App</title>
   </head>
-  <body>
-    <div id="root"></div>
+  <body class="h-100 bg-light">
+    <div class="h-100">
+      <div class="h-100" id="chat"></div>
+    </div>
   </body>
 </html>
